--- a/javascript-challenge.css
+++ b/javascript-challenge.css
@@ -84,3 +84,17 @@ form[kjs-type=extendingForm] [kjs-role=extension] {
     display: none; }
   [kjs-type=tabs] [kjs-role=content] img {
     width: 100%; }
+
+    [kjs-type=checkbox]{
+      border: 1px solid #00B7BD;
+    }
+
+    [kjs-role=checkmark]{
+      cursor: pointer;
+    }
+
+    [kjs-role=checkmark]:after{
+      background-color: #00B7BD;
+    }
+    
+    
